--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-  "version": 2,
   "builds": [
     {
       "src": "backend/server.js",
@@ -13,15 +12,12 @@
   "routes": [
     {
       "src": "/(manifest\\.json|catalog/.*|meta/.*)",
-      "dest": "/backend/server.js"
-    },
-    {
-      "src": "/configure",
-      "dest": "/frontend/dist/index.html"
+      "dest": "backend/server.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/dist/$1"
+      "dest": "frontend/dist/$1"
     }
-  ]
+  ],
+  "outputDirectory": "frontend/dist"
 }
