--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "backend/server.js",
@@ -11,13 +12,12 @@
   ],
   "routes": [
     {
-      "src": "/(manifest\\.json|catalog/.*|meta/.*)",
+      "src": "/(manifest\\.json|catalog/.*|meta/.*|configure|.*configure.*)",
       "dest": "backend/server.js"
     },
     {
       "src": "/(.*)",
       "dest": "frontend/dist/$1"
     }
-  ],
-  "outputDirectory": "frontend/dist"
+  ]
 }
