--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,20 @@
 {
   "name": "ghostlists-addon",
   "version": "1.0.0",
-  "description": "A Stremio catalog addon that adds lists without the clutter",
+  "description": "A Stremio catalog addon that adds MDBList-powered lists without the clutter",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "stremio-addon-sdk": "^1.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=14"
