--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "builds": [
     {
-      "src": "backend/api/index.js",
-      "use": "@vercel/node"
-    },
-    {
       "src": "frontend/package.json",
       "use": "@vercel/static-build"
+    },
+    {
+      "src": "backend/api/index.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -15,14 +15,9 @@
       "dest": "backend/api/index.js"
     },
     {
-      "src": "/(configure|favicon\\.png|logo\\.png|background\\.png|.*\\.(js|css|png|jpg|ico|svg))",
-      "dest": "/frontend/dist/$1"
-    },
-    {
-      "src": "/",
-      "dest": "/frontend/dist/index.html"
+      "src": "/(.*)",
+      "dest": "frontend/dist/$1"
     }
   ],
   "outputDirectory": "frontend/dist"
 }
-
