--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "extends": "../tsconfig.node.json",
   "compilerOptions": {
     "target": "ESNext",
     "baseUrl": ".",
@@ -21,6 +20,5 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src", "vite-env.d.ts"],
-  "references": [{ "path": "../tsconfig.node.json" }]
+  "include": ["src", "vite-env.d.ts"]
 }
