--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,7 @@
 {
   "builds": [
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build"
-    },
-    {
-      "src": "backend/api/index.js",
-      "use": "@vercel/node"
-    }
+    { "src": "frontend/package.json",  "use": "@vercel/static-build" },
+    { "src": "backend/api/index.js",   "use": "@vercel/node"       }
   ],
   "routes": [
     {
@@ -15,11 +9,7 @@
       "dest": "backend/api/index.js"
     },
     {
-      "src": "/configure",
-      "dest": "frontend/dist/index.html"
-    },
-    {
-      "src": "/configure/.*",
+      "src": "/configure(?:/.*)?",
       "dest": "frontend/dist/index.html"
     },
     {
