--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
-    { "src": "frontend/package.json",  "use": "@vercel/static-build" },
-    { "src": "backend/api/index.js",   "use": "@vercel/node"       }
+    { "src": "frontend/package.json", "use": "@vercel/static-build" },
+    { "src": "backend/api/index.js",  "use": "@vercel/node"       }
   ],
   "routes": [
     {
@@ -9,7 +9,11 @@
       "dest": "backend/api/index.js"
     },
     {
-      "src": "/configure(?:/.*)?",
+      "src": "^/(?:|index\\.html)$",
+      "dest": "frontend/dist/index.html"
+    },
+    {
+      "src": "^/configure(?:/.*)?$",
       "dest": "frontend/dist/index.html"
     },
     {
